2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Add epc_shell_expand_name for constructing service names.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/shell.c, libepc/shell.h: Add epc_shell_expand_name.
	* Makefile.am, tests/.gitignore: Add tests/test-expand-name.c.
	* tests/test-expand-name.c: Test epc_shell_expand_name.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Add error argument to epc_shell_get_host_name to allow usage,
	even if no Avahi clients has been created yet.

	* libepc/shell.c, libepc/shell.h:
	Add error argument to epc_shell_get_host_name.
	* libepc/publisher.c, libepc/publisher.h:
	Add error argument to epc_publisher_get_url and propagate
	errors reported by epc_shell_get_host_name.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Correct XML problems in epc_consumer_lookup documentation.

	* libepc/consumer.c: Drop the angle brackets.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Replace the global _epc_debug variable by epc_shell_get_debug_level.
	Also document the EPC_DEBUG environment variable.

	* docs/reference/libepc/libepc-1.0-sections.txt, libepc/shell.h:
	Add EPC_DEBUG_LEVEL and epc_shell_get_debug_level.
	* libepc/shell.c: Replace _epc_debug by epc_shell_get_debug_level.
	* libepc/consumer.c, libepc/contents.c, libepc/dispatcher.c,
	libepc/publisher.c, libepc/service-monitor.c, libepc/tls.c:
	Replace _epc_debug by EPC_DEBUG_LEVEL.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Drop epc_shell_ref and epc_shell_unref and use g_atexit for cleanup.

	* docs/reference/libepc/libepc-1.0-sections.txt, libepc/shell.c,
	libepc/shell.h: Remove epc_shell_ref and epc_shell_unref.
	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c, 
	libepc/service-monitor.c, tests/framework.c:
	Don't call epc_shell_ref and epc_shell_unref.

2007-11-27  Murray Cumming  <murrayc@murrayc.com>

	* libepc/publisher.c: epc_publisher_set_auth_handler() documentation: 